<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>org.unitedlands</groupId>
  <artifactId>UnitedWar</artifactId>
  <version>0.1-WARLIVES-SNAPSHOT3</version>
  <name>UnitedWar</name>

  <properties>
    <java.version>17</java.version>
    <paper.api.version>1.21.4-R0.1-SNAPSHOT</paper.api.version>
  </properties>

  <repositories>
    <repository>
      <id>papermc-repo</id>
      <url>https://repo.papermc.io/repository/maven-public/</url>
    </repository>
    <repository>
      <id>towny</id>
      <url>https://repo.codemc.org/repository/maven-public/</url>
    </repository>
    <repository>
      <id>ebean</id>
      <url>https://repo.maven.apache.org/maven2/</url>
    </repository>
    <repository>
      <id>glaremasters repo</id>
      <url>https://repo.glaremasters.me/repository/towny/</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>io.papermc.paper</groupId>
      <artifactId>paper-api</artifactId>
      <version>${paper.api.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.palmergames.bukkit.towny</groupId>
      <artifactId>towny</artifactId>
      <version>0.101.0.0</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.j256.ormlite</groupId>
      <artifactId>ormlite-core</artifactId>
      <version>6.1</version>
    </dependency>

    <dependency>
      <groupId>com.j256.ormlite</groupId>
      <artifactId>ormlite-jdbc</artifactId>
      <version>6.1</version>
    </dependency>

    <dependency>
      <groupId>com.mysql</groupId>
      <artifactId>mysql-connector-j</artifactId>
      <version>9.2.0</version>
    </dependency>

  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.5.0</version>
        <executions>
            <execution>
                <phase>package</phase>
                <goals>
                    <goal>shade</goal>
                </goals>
                <configuration>
                    <relocations>
                        <relocation>
                            <pattern>com.j256.ormlite</pattern>
                            <shadedPattern>org.unitedlands.libs.ormlite</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.mysql</pattern>
                            <shadedPattern>org.unitedlands.libs.mysql</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
            </execution>
        </executions>
    </plugin>
    </plugins>
  </build>
</project>